# aero

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindEigen.cmake
IO/: Cp.pos  M.pos  M6.cfg  M6.pts  N12.cfg  N12.pts
display/: flowDisp.m
include/: Body2field_AIC.h  Body_AIC.h  Field.h  Field2body_AIC.h  Field2field_AIC.h  Field_AIC.h  Minigrid.h  Minigrid_AIC.h  Network.h  Numerical_CST.h  Subpanel.h  Subpanel_AIC.h  build_AIC.h  cast_ray_pip.h  compute_fVars.h  compute_sVars.h  create_field.h  create_panel.h  create_wake.h  id_subpanel.h  infcB.h  infcBB.h  infcBF.h  infcF.h  infcFB.h  infcFF.h  interp.h  interp_ctv.h  interp_sp.h  map_derivatives.h  map_field.h  post.h  pre.h  read_config.h  read_sgrid.h  solve_body.h  solve_field.h  solver.h  split_panel.h  write_fv.h  (+1 more)
mesh/: Mesh.m
src/: CMakeLists.txt  build_AIC.cpp  cast_ray_pip.cpp  compute_fVars.cpp  compute_sVars.cpp  create_field.cpp  create_panel.cpp  create_wake.cpp  id_subpanel.cpp  infcB.cpp  infcBB.cpp  infcBF.cpp  infcF.cpp  infcFB.cpp  infcFF.cpp  interp.cpp  interp_ctv.cpp  interp_sp.cpp  main.cpp  map_derivatives.cpp  map_field.cpp  post.cpp  pre.cpp  read_config.cpp  read_sgrid.cpp  solve_body.cpp  solve_field.cpp  solver.cpp  split_panel.cpp  write_fv.cpp  write_sp.cpp
